<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/action_save_location"
        android:icon="@drawable/save_location_icon"
        android:title="@string/save_location"
        android:checkable="true"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_save_image"
        android:icon="@drawable/save_image_icon"
        android:title="@string/save_image_btn"
        android:checkable="true"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:title="@string/search_bar_text"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
      />



</menu>