<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_redirect"
            android:icon="@drawable/account_icon"
            android:title="@string/my_account"

            />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/picture_gallery_icon"
            android:title="@string/images" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/login_icon"
            android:title="@string/login"
            android:visible="false"/>
    </group>
</menu>